<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:text="@string/env_status_current_lbl"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/env_status_lbl_text_size"
        android:gravity="center_horizontal"
        android:padding="@dimen/theme_margin"
        />
    <TextView
        android:id="@+id/env_type_current"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:ellipsize="end"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/env_status_text_size"
        android:gravity="center_horizontal"
        />

    <RadioGroup
        android:id="@+id/env_type_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/theme_margin"
        android:paddingEnd="@dimen/theme_margin">
        <RadioButton style="@style/vertical_item_radio" android:id="@+id/env_type_sit" android:text="@string/env_type_sit" />
        <RadioButton style="@style/vertical_item_radio" android:id="@+id/env_type_pre" android:text="@string/env_type_pre"  />
        <RadioButton style="@style/vertical_item_radio" android:id="@+id/env_type_release" android:text="@string/env_type_release"  />
    </RadioGroup>
    <View style="@style/horizontal_divider" />
    <RadioGroup
        android:id="@+id/statistics_log_on_off_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/theme_margin"
        android:paddingEnd="@dimen/theme_margin"
        >
        <RadioButton style="@style/horizontal_item_radio" android:id="@+id/statistics_on" android:text="@string/statistics_on" />
        <RadioButton style="@style/horizontal_item_radio" android:id="@+id/statistics_off" android:text="@string/statistics_off"  />
    </RadioGroup>
</LinearLayout>
