<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="@dimen/theme_margin">

    <TextView
        android:id="@+id/btn_connection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableBottom="@drawable/btn_start"
        android:text="@string/log_status_off"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="@dimen/theme_margin"
        />
    <View android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="@dimen/theme_margin"
        android:background="@color/colorPrimary"
        />
    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/theme_margin"
        app:columnCount="4"
        >

        <TextView style="@style/main_item"
            android:id="@+id/btn_log"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:drawableTop="@drawable/icon_log"
            android:text="@string/log_title" />

        <TextView style="@style/main_item"
            android:id="@+id/btn_env"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:drawableTop="@drawable/icon_env"
            android:text="@string/env_title" />
        <TextView style="@style/main_item"
            android:id="@+id/btn_info"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:drawableTop="@drawable/icon_info"
            android:text="@string/info_title" />
    </android.support.v7.widget.GridLayout>

</LinearLayout>
